fix lessons day shift bug

--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -1,4 +1,4 @@
-$dark-main-color: #4C3327;
+$dark-main-color: #7a4e2f;
 $light-main-color: #F2EFE4;
 $letters-color: #CB8C1D;
 $button-hovered-color: rgba(203, 140, 29, .2);
